Fix <Hx> tag z-index in trix editor

--- a/app/assets/stylesheets/spina/_trix_custom.sass
+++ b/app/assets/stylesheets/spina/_trix_custom.sass
@@ -1,5 +1,6 @@
 trix-toolbar
   position: sticky
+  z-index: 2
 
   .trix-button-group
     border: 0
@@ -99,6 +100,7 @@ trix-editor
   h1, h2, h3, h4, h5, h6
     padding-left: 24px
     position: relative
+    z-index: 1
 
     &:after
       color: #ccc
@@ -205,7 +207,7 @@ trix-editor
       white-space: nowrap
       width: auto
 
-  figure[data-trix-mutable] 
+  figure[data-trix-mutable]
     .trix-attachment-spina-image:before
       background: $primary-color
       color: white
@@ -215,4 +217,4 @@ trix-editor
 
   .trix-button--remove
     border: none
-    box-shadow: 0 0 5px rgba(0, 0, 0, .15) 
+    box-shadow: 0 0 5px rgba(0, 0, 0, .15)
